--- a/index.html
+++ b/index.html
@@ -146,16 +146,16 @@
                         <form>
                             <div class="mb-3">
                               <label for="exampleInputEmail1" class="form-label">Name</label>
-                              <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                              <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Your Name">
                             </div>
                             <div class="mb-3">
                               <label for="exampleInputPassword1" class="form-label">Email</label>
-                              <input type="email" class="form-control" id="exampleInputPassword1">
+                              <input  type="email" class="form-control" id="exampleInputPassword1" placeholder="Enter Your Email">
                             </div>
                            
                             <div class="input-group">
-                                <span class="input-group-text">Massage</span>
-                                <textarea class="form-control" aria-label="With textarea"></textarea>
+                                
+                                <textarea class="form-control" aria-label="With textarea">message</textarea>
                               </div>
                             <button type="submit" class="">Submit</button>
                           </form>
