--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <!-- <a class="nav-link" href="#">Services</a> -->
                     <a class="nav-link" href="#carouselExampleCaptions">Community</a>
                     <a class="nav-link" href="#about">About</a>
-                    <a class="nav-link " href="#contact">Contect Us</a>
+                    <a class="nav-link " href="#contact">Contact Us</a>
                 </div>
             </div>
         </div>
